--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -166,6 +166,77 @@ $admin-main-color: #009879;
             }
 
         }
+        .product-update-page-header {
+            height: 80px;
+            color: $admin-main-color;
+            font-size: 22px;
+            vertical-align: middle;
+            font-weight: 600;
+            line-height: 78px;
+            margin-bottom: 16px;
+        }
+
+        .product-update-table-container {
+            position: relative;
+            width: 100%;
+            width: 100%;
+            height: 80%;
+            border-radius: 5px 5px 0 0;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+            padding: 12px 15px;
+            overflow-y: auto;
+
+            .product-update-table-head {
+                background-color: #009879;
+                color: #ffffff;
+                text-align: left;
+                font-weight: bold;
+            }
+
+            .product-update-table-row {
+                height: auto;
+                min-height: 40px;
+                padding: 10px;
+
+                // margin-bottom: 16px;
+                .table-cell-value {
+                    border-left: 1px solid #dddddd;
+                    overflow-wrap: break-word;
+                    line-break: after-white-space;
+                    max-width: 600px;
+
+                    &:focus {
+                        outline: 1px solid $admin-main-color;
+                        border-radius: 4px;
+                    }
+                }
+
+                &:last-of-type {
+                    margin-bottom: 16px;
+                }
+            }
+
+            .product-update-table-row:nth-of-type(even) {
+                background-color: #f3f3f3;
+                color: #009879;
+                font-weight: bold;
+            }
+
+            .product-save-update {
+                cursor: pointer;
+                position: absolute;
+                right: 16px;
+                height: 40px;
+                width: 80px;
+                border-radius: 5px;
+                border: none;
+                background-color: #009879;
+                color: white;
+                font-weight: 600;
+
+            }
+        }
 
     }
 
