--- a/public/styles/_returnpolicy.scss
+++ b/public/styles/_returnpolicy.scss
@@ -6,7 +6,7 @@ body {
 }
 .returnpolicy {
     position: relative;
-    left: 20vw;
+    //left: 20vw;
     h1 {
         text-align: center;
     }
