--- a/public/index.css
+++ b/public/index.css
@@ -14,6 +14,10 @@ body {
 }
 
 .footer-container {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background-color: #2d2d2d !important;
   position: relative;
   bottom: 0;
   display: -webkit-box;
@@ -26,6 +30,10 @@ body {
   border-color: black;
   background-color: azure;
   padding: 0px 16px;
+}
+
+.footer-container a {
+  color: white;
 }
 
 .footer-container .col1 {
@@ -41,9 +49,12 @@ body {
   list-style: none;
 }
 
+.footer-container .col1 li :hover {
+  color: #f3d424;
+}
+
 .installment {
   position: relative;
-  left: 20vw;
 }
 
 .installment h1 {
@@ -56,7 +67,6 @@ body {
 
 .returnpolicy {
   position: relative;
-  left: 20vw;
 }
 
 .returnpolicy h1 {
@@ -84,60 +94,86 @@ body {
 
 .warranty {
   position: relative;
-  left: 20vw;
 }
 
 .warranty h1 {
   text-align: center;
 }
 
-.categoryPage {
-  width: 90vw;
+.home-wrapper {
+  background-color: #b1adad;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.home-wrapper .container {
+  padding: 0;
+  margin-left: 100px;
+  margin-right: 50px;
+  background-color: #dad3d3;
+  width: 100%;
+}
+
+.home-wrapper .container .categoryPage {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.categoryPage .categoryList {
-  margin: 0%;
-  border: solid;
-  border-color: black;
-  background-color: #9ed7ee;
-  width: 12vw;
+.home-wrapper .container .categoryPage .categoryList {
+  color: white;
+  background-color: #7e7a7a;
   height: 100%;
-  display: inline-block;
 }
 
-.categoryPage .product_matrix {
+.home-wrapper .container .categoryPage .categoryList li a {
+  color: white;
+}
+
+.home-wrapper .container .categoryPage .categoryList li a:hover {
+  color: #c0b40e;
+}
+
+.home-wrapper .container .categoryPage .categoryList h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.home-wrapper .container .categoryPage .product_matrix {
   display: inline;
   right: 0;
   width: 80%;
 }
 
-.categoryPage .product_matrix .product_item {
-  border: solid;
+.home-wrapper .container .categoryPage .product_matrix .product_item {
   display: inline-block;
   margin: 5px;
 }
 
-.categoryPage .product_matrix .product_item img {
+.home-wrapper .container .categoryPage .product_matrix .product_item a {
+  color: black;
+}
+
+.home-wrapper .container .categoryPage .product_matrix .product_item a:hover {
+  color: #a59b0a;
+}
+
+.home-wrapper .container .categoryPage .product_matrix .product_item img {
   height: 250px;
   width: 12vw;
 }
 
-.categoryPage .product_matrix .product_item:hover {
-  border-color: red;
+.home-wrapper .container .categoryPage .product_matrix .product_item:hover {
+  border-color: #f3d424;
 }
 
 .footer-container .col1 .location-wrapper {
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
+  width: 120%;
 }
 
 .footer-container .col1 .location-wrapper .map {
-  height: 400px;
-  width: 100%;
+  height: 150px !important;
 }
 
 .home-wrapper {
@@ -163,8 +199,30 @@ body {
 }
 
 .home-wrapper .main-screen {
-  position: absolute;
-  left: 0px;
-  top: 0px;
   z-index: 1;
 }
+
+.navbar.navbar-expand-lg.navbar-light.bg-light {
+  background-color: #f3d424 !important;
+  margin-right: 0px;
+  border-left-style: solid;
+  border-left-color: black;
+  border-top-style: solid;
+  border-top-color: black;
+  border-bottom-style: solid;
+  border-bottom-color: black;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.navbar.navbar-expand-lg.navbar-light.bg-light .navbar-brand {
+  color: #f3d424;
+  background-color: #2d2d2d;
+  padding: 15px;
+}
+
+.navbar.navbar-expand-lg.navbar-light.bg-light .collapse.navbar-collapse .navbar-nav.mr-auto :hover {
+  background-color: #f0e3e3;
+}
+/*# sourceMappingURL=index.css.map */
