--- a/public/styles/location.css
+++ b/public/styles/location.css
@@ -1,10 +1,8 @@
 .footer-container .col1 .location-wrapper {
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
+  width: 120%;
 }
 
 .footer-container .col1 .location-wrapper .map {
-  height: 400px;
-  width: 100%;
+  height: 150px !important;
 }
+/*# sourceMappingURL=location.css.map */
