--- a/public/styles/location.scss
+++ b/public/styles/location.scss
@@ -2,13 +2,19 @@
     .col1{
         //border: 1px solid green;
         .location-wrapper {
-            width: 100%;
-            height: 100%;
-            min-height: 400px;
+           // width: 100%;
+           // height: 100%;
+           // min-height: 400px;
+           width: 120%;
+           //height: 100%;
+           //min-height: 400%;
             .map {
-                height: 400px;
-                width: 100%;
+              //  height: 400px;
+               // width: 100%;
                 // border: 1px solid green;
+                height: 150px !important;
+                //width: 100% ;
+
             }
         }
     }
