--- a/public/styles/order.scss
+++ b/public/styles/order.scss
@@ -24,3 +24,29 @@
         }
     }
 }
+
+.order {
+    margin: 2% 0;
+    width: 100%;
+    .h4 {
+        margin-bottom: 1%;
+    }
+    .order-container {
+        margin: 0;
+        width: 100%;
+        font-size: 80%;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        .row {
+            padding: 1% 0;
+            .col {
+                padding: 0;
+                text-align: center;
+            }
+        }
+        .heading {
+            font-weight: 600;
+            border-bottom: 1px solid #dedede;
+        }
+    }
+}
