--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -402,6 +402,53 @@
   font-weight: 600;
 }
 
+.admin-layout .container .create-staff-wrapper {
+  position: relative;
+  left: 50%;
+  top: 30%;
+  -webkit-transform: translate(-50%, -30%);
+          transform: translate(-50%, -30%);
+  padding: 16px 0px;
+  width: 500px;
+  height: 350px;
+  background-color: #fff;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  padding: 8px;
+}
+
+.admin-layout .container .create-staff-wrapper h1 {
+  color: #009879;
+  margin-bottom: 24px;
+}
+
+.admin-layout .container .create-staff-wrapper input[type=radio] {
+  color: #009879;
+}
+
+.admin-layout .container .create-staff-wrapper .form-group {
+  margin-bottom: 16px;
+}
+
+.admin-layout .container .create-staff-wrapper .form-group label {
+  font-size: 18px;
+  color: #009879;
+}
+
+.admin-layout .container .create-staff-wrapper .create-btn {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  height: 30px;
+  width: 80px;
+  padding: 0px 5px;
+  background-color: #009879;
+  color: #fff;
+  border: none;
+}
+
 .admin-layout .slide-bar {
   position: relative;
   height: 100vh;
