--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -88,6 +88,7 @@ $admin-main-color: #009879;
                                 height: 30px;
                                 border-radius: 5px;
                                 box-shadow: 1px 1px 10px #00b994;
+                                font-weight: normal;
                                 a {
                                     text-decoration: none;
                                      color: #ffffff;
